fixed strange picture stretching on mobile view

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -185,6 +185,30 @@ menu:hover{
     grid-template-columns: 100%;
     grid-template-rows: auto auto;
   }
+
+  .dark-gallery{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    .d-pic-1{
+        grid-area: 1 / 1 / span 1 / span 1;
+      }
+      .d-pic-2{
+        grid-area: 2 / 1 / span 1 / span 1;
+      }
+      .d-pic-3{
+        grid-area: 3 / 1 / span 1 / span 1;
+      }
+      .d-pic-4{
+        grid-area: 4 / 1 / span 1 / span 1;
+      }
+      .d-pic-5{
+        grid-area: 5 / 1 / span 1 / span 1;
+      }
+      .d-pic-6{
+        grid-area: 6 / 1 / span 1 / span 1;
+      }
+  }
 }
 
 // for small screen
@@ -241,25 +265,6 @@ menu:hover{
     }
     .a-pic-4{
       grid-area: 4 / 1 / span 1 / span 1;
-    }
-
-    .d-pic-1{
-      grid-area: 1 / 1 / span 1 / span 1;
-    }
-    .d-pic-2{
-      grid-area: 2 / 1 / span 1 / span 1;
-    }
-    .d-pic-3{
-      grid-area: 3 / 1 / span 1 / span 1;
-    }
-    .d-pic-4{
-      grid-area: 4 / 1 / span 1 / span 1;
-    }
-    .d-pic-5{
-      grid-area: 5 / 1 / span 1 / span 1;
-    }
-    .d-pic-6{
-      grid-area: 6 / 1 / span 1 / span 1;
     }
   }
 }
